# Incident-management

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh
config/: __init__.py  mcp_config.py
docs/: ADDING_NEW_MCP_SERVERS.md  GITHUB_MCP_INTEGRATION_SUMMARY.md  GITHUB_MCP_SETUP.md  INCIDENT_FIX_VISION.md  PYTHON_VERSION_ISSUE.md  SUBAGENTS.md  SUBAGENT_QUICK_START.md  SUBAGENT_SUMMARY.md
examples/: autonomous_workflow.py  incident_fix_workflow.py  simple_sdk_query.py  simple_subagent.py  subagent_example.py  test_github_mcp.py  verify_mcp_servers.py
src/: __init__.py  autonomous_agent.py
